# xonotic

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYING  Makefile  README.md  all  all-download.sh  all-pull.sh  all-update.sh  changes-since-last-release  check-gitattributes.sh  compress_pk3.sh  copy-gitattributes-to-branches.sh  default.nix  derivation.nix  key_0.d0pk  key_1.d0pk  key_15.d0pk  nexuiz-linux-glx.sh  nexuiz-linux-sdl.sh  nix-build.sh  readme.html  release.cmake  release.nix  savecore.gdb  the-big-benchmark.sh  uncompress_squashfs.pk3  xonotic-linux-dedicated.sh  xonotic-linux-glx.sh  xonotic-linux-sdl.sh
Docs/: .gitattributes  basics.html  compile-settings.txt  eventlog.txt  faq.html  faq.md  guide.md  irc.html  mapdownload.txt  mapping.txt  nexuiz.game  say-esc.html  scorelog.txt  xonotic.game
Docs/egyptsoc/: egyptsoc_readme.txt  normalmaps.scm  permission.txt
Docs/htmlfiles/: basics.aft  faq.aft  faq.markdown  footer.html-part  header.html-part  make-htmlfiles.sh  style.css
data/: .gitignore
data/font-dejavu.pk3dir/: font-dejavu.cfg
data/font-nimbussansl.pk3dir/: font-nimbussansl.cfg
data/font-notosanscjk.pk3dir/: fetch-fonts.sh  font-cjk.cfg  make-cfg.sh
data/font-xolonium.pk3dir/: font-xolonium.cfg
data/scripts/: shaderlist.txt
havoc/: default.cfg
misc/builddeps/emscripten/ode/include/ode/: Makefile.am  Makefile.in  collision.h  collision_space.h  collision_trimesh.h  common.h  config.h  config.h.in  contact.h  mass.h  objects.h  odecpp.h  odemath.h
misc/buildsrc/: dlls.sh  dylibs-osx.sh  sdl.sh
misc/infrastructure/: MR_template.md  cat-if-error.sh  checkupdate.txt  common.sh  git-mirror-update.sh  git-vhost.conf  ircspam.pl  prepare_releasenotes.py  refresh-checkupdate.sh  refresh-tos.sh  tos.txt  transifex.cron  update-rsync.sh  xonotic-map-compiler.cron  xonotic-map-indexpages.cron  xonotic-map-screenshot.cron  xonotic-release-build.cron
misc/logos/: org.xonotic.Xonotic.metainfo.xml  xonotic-glx.desktop  xonotic-sdl.desktop  xonotic.appdata.xml  xonotic.desktop
misc/mediasource/: sb_str_inv.xcf
misc/pki/: key_0.d0sk.asc  key_15.d0sk.asc  key_15.txt
misc/tools/: QuakeC Codeblocks.txt  WeaponEncounterProfile.pm  assault-circuit-board-creator.pl  autoshader.sh  brightspot.c  brightspot.sh  bsp2ent  bsptool-shaderfun.sh  bsptool.pl  build-dylibs-osx.sh  cached-converter.sh  cfgapply.pl  change-icon-of-exe.sh  compress-texture  conflict-rss.sh  conflict-watch.sh  conftest.c  crc16.c  csqcarchive.sh  democonv-15-20.pl  demopacker.sh  demotc-race-record-extractor.sh  demotc.pl  dependencies.pl  encode-demos.sh  entmerge.pl  fft-normalmap-to-heightmap-soft.sh  fft-normalmap-to-heightmap.c  fiximage.pl  fov-calc.py  generate-dds.sh  generate-jpeg.sh  git-import-pk3  git-pk3-import  git-pk3-merge  hitplot2tga.c  hslimage.c  jpeg-if-not-alpha.sh  makebuild.sh  map-sRGBconvert.pl  (+37 more)
server/: help.cfg  rcon.pl  readme.txt  server.cfg  server_havoc_linux.sh  server_havoc_mac.sh  server_havoc_windows.bat  server_linux.sh  server_mac.sh  server_windows.bat
server/hub/: about.txt  aliases.cfg  hub-launcher.sh  profile-bitmissile.cfg  (+9 more)
(+526 files in other folders)
