libglitch_includedir = $(includedir)/ode
libglitch_include_HEADERS = 	collision_trimesh.h \
				mass.h \
				odecpp.h \
				common.h \
				matrix.h \
				odecpp_collision.h \
				compatibility.h \
				memory.h \
				odecpp_old.h \
				contact.h \
				misc.h \
				odemath.h \
				collision.h \
				error.h \
				objects.h \
				rotation.h \
				collision_space.h \
				export-dif.h \
				ode.h  \
				timer.h \
				config.h

EXTRA_DIST = config.h.in
